force-app/main/default/objects/Invoice_Line__c/fields/PKWiU__c.field-meta.xml
<CustomField>
    <fullName>PKWiU__c</fullName>
    <label>PKWiU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>