force-app/main/default/objects/Invoice_Line__c/fields/Unit_Price_Net__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Net__c</fullName>
    <label>Unit Price Net</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>