force-app/main/default/objects/Invoice_Line__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>23</fullName>
                <default>true</default>
                <label>23%</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8%</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5%</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3%</label>
            </value>
            <value>
                <fullName>zw</fullName>
                <label>Exempt (zw)</label>
            </value>
            <value>
                <fullName>oo</fullName>
                <label>Reverse charge (oo)</label>
            </value>
            <value>
                <fullName>0 KR</fullName>
            </value>
            <value>
                <fullName>0 WDT</fullName>
            </value>
            <value>
                <fullName>0 EX</fullName>
            </value>
            <value>
                <fullName>np I</fullName>
            </value>
            <value>
                <fullName>np II</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>np</fullName>
                <isActive>false</isActive>
                <label>np</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>