force-app/main/default/objects/Invoice_Line__c/listViews/All_Lines.listView-meta.xml
<ListView>
    <fullName>All_Lines</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Line_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit__c</columns>
    <columns>Unit_Price_Net__c</columns>
    <columns>Net_Amount__c</columns>
    <columns>VAT_Rate__c</columns>
    <columns>VAT_Amount__c</columns>
    <columns>Gross_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lines (Wszystkie pozycje)</label>
</ListView>